<resources>
    <string name="app_name">Terminal Chess</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="waiting_for_player">▷</string>
    <string name="waiting_for_opponent">◷</string>
    <string name="offer_draw">⚐</string>
    <string name="draw_offered">⚑</string>
    <string name="title_activity_network_game_menu">NetworkGameMenu</string>
    <string name="transition_boardview">BoardViewTransition</string>
    <string name="transition_statusbar">StatusTransition</string>
    <string name="transition_boardIntoPB">BoardIntoProgressBar</string>
    <string name="StartMatch">START MATCH</string>
    <string name="JoinMatch">-> join match</string>
    <string name="CreateMatch">-> create match</string>
    <string name="CreatePublicMatch">-> create public match</string>
    <string name="PublicMatch">public</string>
    <string name="PublicMatchListHeader">public matches:</string>
    <string name="uuidHint">uuid</string>
</resources>
